Organized algorithm's files into their respective folders and added a configuration json file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# JSON Library for C++
-algorithms/base/json.hpp
+# External dependencies
+libs
 
 # Executables from C++
-algorithms/base/*.exe
+algorithms/**/*.exe
